--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,46 @@ readme = "README.md"
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pytest-asyncio = "^0.20.3"
+black = "^22.12.0"
+isort = "^5.11.4"
+pytest-timeout = "^2.1.0"
+pytest-xdist = "^3.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+target_version = ['py311']
+include = '\.pyi?$'
+
+[tool.isort]
+line_length = 88
+indent = '    '
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+src_paths = ['variants', 'tests']
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q -n 4 --disable-warnings --asyncio-mode=strict --timeout=300"
+testpaths = [
+    "tests",
+]
+
+[tool.coverage.run]
+omit = [
+    "variants/errors.py",
+    "variants/types.py",
+]
+
+[tool.coverage.report]
+fail_under = 60
+skip_covered = true
+skip_empty = true
