--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "variants"
+name = "derivation"
 version = "0.1.0"
 description = ""
 authors = ["Rain Wu <rain.wu@appier.com>"]
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -33,7 +32,7 @@ indent = '    '
 multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
-src_paths = ['variants', 'tests']
+src_paths = ['derivation', 'tests']
 
 [tool.pytest.ini_options]
 minversion = "7.0"
@@ -44,8 +43,8 @@ testpaths = [
 
 [tool.coverage.run]
 omit = [
-    "variants/errors.py",
-    "variants/types.py",
+    "derivation/errors.py",
+    "derivation/types.py",
 ]
 
 [tool.coverage.report]
