--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        go: [1.19]
+        py: [3.7, 3.8, 3.9, 3.10, 3.11]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
@@ -20,9 +20,15 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v3
 
-    - uses: actions/setup-go@v3
+    - uses: actions/setup-py@v4
       with:
-        go-version: ${{ matrix.go }}
+        python-version: ${{ matrix.py }}
+
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+
+    - name: Install Dependencies
+      run: poetry install --no-interaction
 
     - name: Lint
       run: make lint
