--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        py: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python: [3.7, 3.8, 3.9, 3.10, 3.11]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
@@ -20,9 +20,9 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v3
 
-    - uses: actions/setup-py@v4
+    - uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.py }}
+        python-version: ${{ matrix.python }}
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
