--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
@@ -26,6 +26,10 @@ jobs:
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
+      with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
 
     - name: Install Dependencies
       run: poetry install --no-interaction
