feat($derivative): mvp
Signed-off-by: Rain Wu <rain.wu@appier.com>

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Test
       run: make test
 
+    - name: Vulnerability Scan
+      run: make secure
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
