--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04, ubuntu-22.04, macos-12, macos-11, windows-2022]
 
     runs-on: ${{ matrix.os }}
     steps:
