--- a/.github/workflows/release_tag.yml
+++ b/.github/workflows/release_tag.yml
@@ -16,7 +16,7 @@ jobs:
 
     - uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python }}
+        python-version: 3.11
 
     - name: Install Poetry
       uses: snok/install-poetry@v1
